# flash

./: .gitmodules  Cargo.toml  README.md  cs32f1x.cfg  openocd.cfg
projects/devices/controller/: Cargo.toml
projects/devices/controller/src/: main.rs
projects/devices/lights/: Cargo.toml
projects/devices/lights/src/: main.rs
projects/etc/rx/: Cargo.toml
projects/etc/rx/src/: main.rs
projects/etc/tx/: Cargo.toml
projects/etc/tx/src/: main.rs
projects/shared/: Cargo.toml
projects/shared/src/: lib.rs
src/: main.rs  main.rs.new  main.rs.old  rgb.rs
